# todoAPI

./: .pylintrc  Makefile  README.md  docker-compose.yml
src/: Dockerfile  conftest.py  entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt
src/API/: models.py  serializers.py  urls.py  views.py
src/API/migrations/: 0001_initial.py
src/API/test/: test_endpoint.py  test_model.py
src/core/: settings.py  urls.py
